adding tests + fixing code smells