@@ -1,25 +1,16 @@
 package pl.piomin.services.envoy.person.controller;
 
+import org.springframework.web.bind.annotation.*;
+import pl.piomin.services.envoy.person.model.Person;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-
-import pl.piomin.services.envoy.person.model.Person;
 
 @RestController
 @RequestMapping("/person")
 public class PersonController {
 
-    private List<Person> persons = new ArrayList<>();
+    private final List<Person> persons = new ArrayList<>();
 
     @GetMapping
     public List<Person> findAll() {
@@ -28,7 +19,9 @@ public class PersonController {
 
     @GetMapping("/{id}")
     public Person findById(@RequestParam("id") Long id) {
-        return persons.stream().filter(it -> it.getId().equals(id)).findFirst().get();
+        return persons.stream().filter(it -> it.getId().equals(id))
+                .findFirst()
+                .orElseThrow();
     }
 
     @PostMapping
@@ -40,13 +33,17 @@ public class PersonController {
 
     @DeleteMapping("/{id}")
     public void delete(@RequestParam("id") Long id) {
-        List<Person> p = persons.stream().filter(it -> it.getId().equals(id)).collect(Collectors.toList());
+        List<Person> p = persons.stream()
+                .filter(it -> it.getId().equals(id))
+                .toList();
         persons.removeAll(p);
     }
 
     @PutMapping
     public void update(@RequestBody Person p) {
-        Person person = persons.stream().filter(it -> it.getId().equals(p.getId())).findFirst().get();
+        Person person = persons.stream().filter(it -> it.getId().equals(p.getId()))
+                .findFirst()
+                .orElseThrow();
         persons.set(persons.indexOf(person), p);
     }
 
