@@ -1,25 +1,16 @@
 package pl.piomin.services.envoy.product.controller;
 
+import org.springframework.web.bind.annotation.*;
+import pl.piomin.services.envoy.product.model.Product;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-
-import pl.piomin.services.envoy.product.model.Product;
 
 @RestController
 @RequestMapping("/product")
 public class ProductController {
 
-    private List<Product> products = new ArrayList<>();
+    private final List<Product> products = new ArrayList<>();
 
     @GetMapping
     public List<Product> findAll() {
@@ -28,7 +19,9 @@ public class ProductController {
 
     @GetMapping("/{id}")
     public Product findById(@RequestParam("id") Long id) {
-        return products.stream().filter(it -> it.getId().equals(id)).findFirst().get();
+        return products.stream().filter(it -> it.getId().equals(id))
+                .findFirst()
+                .orElseThrow();
     }
 
     @PostMapping
@@ -40,13 +33,18 @@ public class ProductController {
 
     @DeleteMapping("/{id}")
     public void delete(@RequestParam("id") Long id) {
-        List<Product> p = products.stream().filter(it -> it.getId().equals(id)).collect(Collectors.toList());
+        List<Product> p = products.stream()
+                .filter(it -> it.getId().equals(id))
+                .toList();
         products.removeAll(p);
     }
 
     @PutMapping
     public void update(@RequestBody Product p) {
-        Product product = products.stream().filter(it -> it.getId().equals(p.getId())).findFirst().get();
+        Product product = products.stream()
+                .filter(it -> it.getId().equals(p.getId()))
+                .findFirst()
+                .orElseThrow();
         products.set(products.indexOf(product), p);
     }
 
